--- a/src/styles/checkout-step.module.css
+++ b/src/styles/checkout-step.module.css
@@ -14,26 +14,17 @@
   scrollbar-color: var(--logo-color-400) transparent;
 }
 
-.steps::-webkit-scrollbar {
-  width: 12px;
-  border-radius: 12px;
-}
-
-.steps::-webkit-scrollbar-track {
-  background: transparent;
-  border-radius: 12px;
-}
-
-.steps::-webkit-scrollbar-thumb {
-  background-color: var(--logo-color-400);
-  border-radius: 20px;
-  border: 1px solid var(--bg);
-}
-
 .summary {
   width: 40%;
   display: flex;
   flex-direction: column;
+  z-index: var(--z-index-high);
+}
+
+.back-btn {
+  margin-bottom: 24px;
+  background: none;
+  border: none;
 }
 
 .orderBtn {
