--- a/src/styles/product.module.css
+++ b/src/styles/product.module.css
@@ -11,9 +11,11 @@
 }
 
 .placeholder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
   width: 100%;
-  background: var(--bg);
 }
 
 .info {
