--- a/src/styles/cart-view.module.css
+++ b/src/styles/cart-view.module.css
@@ -1,6 +1,7 @@
-.container {
+.cart-container {
   --py: 35px;
 
+  z-index: var(--z-index-high);
   position: fixed;
   min-width: 460px;
   height: 100vh;
@@ -8,7 +9,6 @@
   -webkit-box-shadow: var(--shade);
   box-shadow: var(--shade);
   background: white;
-  z-index: 11;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -23,6 +23,7 @@
 }
 
 .active {
+  composes: cart-container;
   -webkit-transform: translateX(-460px);
   -ms-transform: translateX(-460px);
   transform: translateX(-460px);
@@ -32,7 +33,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px var(--py);
+  padding: 2.5px var(--py);
+  border-bottom: 1px solid var(--brand-deep-blue);
 }
 
 .closebtn {
