--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,19 +1,14 @@
 .container {
-  min-height: 100vh;
-  padding: 0 88px;
+  padding: 0 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
+  width: 100%;
+  padding: 0 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .title {
@@ -85,10 +80,40 @@
   margin-left: 0.5rem;
 }
 
-.hero {
-  text-align: left;
-  max-width: 800px;
+.tile-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 64px 59px;
 }
+
+.tile-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.tile {
+  display: flex;
+  flex-direction: column;
+}
+
+.tile-body .tile-title {
+  margin-bottom: 8px;
+}
+
+.tile-body .tile-cta {
+  color: var(--brand-green);
+}
+
+.hero {
+  color: white;
+  position: relative;
+  text-align: left;
+  width: 100%;
+  height: 647px;
+}
+
 
 .links {
   display: flex;
