--- a/src/styles/nav-bar.module.css
+++ b/src/styles/nav-bar.module.css
@@ -1,14 +1,34 @@
 .container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 88px;
-  position: absolute;
-  width: 100%;
+  padding: 10px 59px;
+  z-index: var(--z-index-low);
+  color: white;
+  background-color: var(--brand-deep-blue);
 }
 
 .container h1 {
   margin: 0;
+}
+
+.main-nav {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px 59px;
+}
+
+.nav-item {
+  flex: none;
+  flex-grow: 0;
+  margin: 0px 20px;
 }
 
 .logo {
@@ -19,6 +39,7 @@
 .btn {
   border: none;
   background: transparent;
+  color: white;
   display: flex;
   align-items: center;
   font-size: var(--fz-sm);
@@ -30,6 +51,7 @@
 }
 
 .btn svg {
+  stroke: white;
   font-size: var(--fz-ml);
 }
 
