--- a/src/styles/injectable-payment-card.module.css
+++ b/src/styles/injectable-payment-card.module.css
@@ -27,20 +27,21 @@
 
 .payBtn {
   font-size: 1.125rem;
-    min-height: 3rem;
-    min-width: 3rem;
-    padding: 0.5rem 1.25rem;
-    align-self: center;
-    display: inline-flex;
-    align-items: center;
-    background: var(--logo-color-900);
-    color: white;
-    border-radius: 8px;
-    transition: background .2s ease-in;
-    font-weight: 500;
-    border: none;
+  min-height: 3rem;
+  min-width: 3rem;
+  padding: 0.5rem 1.25rem;
+  align-self: center;
+  display: inline-flex;
+  align-items: center;
+  background: var(--brand-deep-blue);
+  color: white;
+  border-radius: 8px;
+  transition: background .2s ease-in;
+  font-weight: 500;
+  border: none;
 }
 
 .payBtn:hover {
-  background: var(--logo-color-1000);
+  background: var(--brand-green);
+  color: var(--brand-deep-blue);
 }
