--- a/src/styles/shipping-method.module.css
+++ b/src/styles/shipping-method.module.css
@@ -1,19 +1,20 @@
 .shippingOption {
-    display: flex;
-    align-items: center;
-    box-shadow: var(--shade);
-    justify-content: space-between;
-    background: white;
-    border-radius: 8px;
-    padding: 1rem 2rem;
-    cursor: pointer;
+  border: none;
+  display: flex;
+  align-items: center;
+  box-shadow: var(--shade);
+  justify-content: space-between;
+  background: white;
+  border-radius: 8px;
+  padding: 1rem 2rem;
+  width: 100%;
 }
 
 .shippingOption div {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .chosen {
-    border: 1px solid var(--logo-color-400)
+  border: 1px solid var(--logo-color-400)
 }
