fix: add prettier

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,12 @@
 :root {
-  --brand-green: #56FBB1;
-  --brand-deep-blue: #0A3149;
-  --brand-cool-grey: #EEF0F5;
+  --brand-green: #56fbb1;
+  --brand-deep-blue: #0a3149;
+  --brand-cool-grey: #eef0f5;
 
-  --ui-100: #89959C;
-  --ui-75: #D9DFE8;
-  --ui-50: #EEF0F5;
-  --ui-25: #F7F7FA;
+  --ui-100: #89959c;
+  --ui-75: #d9dfe8;
+  --ui-50: #eef0f5;
+  --ui-25: #f7f7fa;
 
   --logo-color-1000: #30363d;
   --logo-color-900: #454b54;
