--- a/src/styles/information-step.module.css
+++ b/src/styles/information-step.module.css
@@ -1,42 +1,42 @@
 .styledform {
-    width: 100%;
+  width: 100%;
 }
 
 .sharedrow {
-    display: flex;
+  display: flex;
 }
 
 .sharedrow div:first-of-type {
-    margin-left: 0;
-    margin-right: 10px;
+  margin-left: 0;
+  margin-right: 10px;
 }
 
 .sharedrow div {
-    margin-left: 10px;
-    margin-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .sharedrow div:last-of-type {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .fieldcontainer {
-    width: 100%;
-    background: white;
-    border-radius: 8px;
-    border: 1px solid lightgrey;
-    margin: 5px 0;
-    display: flex;
-    align-items: center;
+  width: 100%;
+  background: white;
+  border-radius: 8px;
+  border: 1px solid lightgrey;
+  margin: 5px 0;
+  display: flex;
+  align-items: center;
 }
 
 .styledfield {
-    height: 40px;
-    width: 100%;
-    padding: 10px;
-    border-radius: 8px;
-    background: transparent;
-    border: none;
+  height: 40px;
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  background: transparent;
+  border: none;
 }
 
 .formbtn {
@@ -50,7 +50,7 @@
   background: var(--brand-deep-blue);
   color: white;
   border-radius: 8px;
-  transition: background .2s ease-in;
+  transition: background 0.2s ease-in;
   font-weight: 500;
   border: none;
 }
@@ -58,19 +58,19 @@
 .formbtn:hover {
   background: var(--brand-green);
   color: var(--brand-deep-blue);
-  }
+}
 
 .spinner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 4rem;
 }
 
 .btncontainer {
-    margin-top: 1.5rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
