--- a/src/styles/injectable-payment-card.module.css
+++ b/src/styles/injectable-payment-card.module.css
@@ -15,7 +15,7 @@
 }
 
 .stepBack svg {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .controls {
@@ -36,7 +36,7 @@
   background: var(--brand-deep-blue);
   color: white;
   border-radius: 8px;
-  transition: background .2s ease-in;
+  transition: background 0.2s ease-in;
   font-weight: 500;
   border: none;
 }
